--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -2,12 +2,14 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY . /app
+COPY . .
+
+RUN chmod -R 755 .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-RUN ls -la /app
+RUN ls
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["python3", "main.py"]
