--- a/src/interface/Dockerfile
+++ b/src/interface/Dockerfile
@@ -1,16 +1,18 @@
+# Usar a imagem base do Python
 FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY streamlit.py /app/
+COPY streamlit.py .
 
-COPY requirements.txt /app/
+COPY requirements.txt .
 
-# Instalar as dependências
-RUN pip install --no-cache-dir -r requirements.txt
+RUN chmod -R 755 .
+
+RUN pip install streamlit
+
+RUN ls
 
 EXPOSE 8501
 
-RUN ls -la /app
-
-CMD ["streamlit", "run", "app/streamlit.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
+CMD ["streamlit", "run", "streamlit.py", "--server.port", "8501", "--server.address", "0.0.0.0"]
